@@ -23,7 +23,10 @@
   ],
   "require": {
     "php": "^8.0",
-    "typo3/cms-core": "^10.4 || ^11.5 || ^12.0"
+    "typo3/cms-core": "^11.5 || ^12.0"
+  },
+  "suggest": {
+    "bugfix/patch-install-tool": "^0.1",
   },
   "autoload": {
     "psr-4": {
