@@ -14,15 +14,16 @@ $EM_CONF[$_EXTKEY] = [
     'state' => 'stable',
     'clearCacheOnLoad' => 0,
     'author_company' => 'jambage.com',
-    'version' => '0.10.0',
+    'version' => '0.11.0',
     'constraints' => [
         'depends' => [
             'php' => '8.0.0-8.1.99',
-            'typo3' => '10.4.0-12.5.99',
+            'typo3' => '11.5.0-12.5.99',
         ],
         'conflicts' => [
         ],
         'suggests' => [
+            'patch_install_tool' => '0.1.0-0.1.99',
         ],
     ],
 ];
